# bocan-agent-os

./: .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  setup.sh  wrangler.toml
bocan/: __init__.py  __main__.py  cli.py
bocan/brain/: __init__.py  memory.py  planner.py
bocan/claw/: __init__.py  base.py  meituan_claw.py  protocol_claw.py  router.py  rpa_claw.py
bocan/core/: agent.py  manifest.py  types.py
bocan/infra/: __init__.py  anti_crawl.py  rate_limiter.py  vault.py
bocan/skill_hub/: __init__.py  base.py  hub.py
bocan/skills/: __init__.py  base.py  coupon_dispatch.py  inventory_sync.py  meituan_queue.py  review_defender.py
web/: dashboard.html  index.html  main.py  standalone.py
